# apps/backend/src/waterfall/api/routes/planning_support.py
@@ -158,6 +158,7 @@ def to_snapshot_task_read(
         duration_minutes=task.duration_minutes,
         duration_format=task.duration_format,
         work_minutes=task.work_minutes,
+        task_type=task.task_type,
         percent_complete=task.percent_complete,
         is_summary=task.is_summary,
         is_milestone=task.is_milestone,
@@ -199,6 +200,7 @@ def to_task_read(
         duration_minutes=task.duration_minutes,
         duration_format=task.duration_format,
         work_minutes=task.work_minutes,
+        task_type=task.task_type,
         percent_complete=task.percent_complete,
         is_summary=task.is_summary,
         is_milestone=task.is_milestone,
