# openapi/waterfall_v1.yaml
@@ -3171,6 +3171,12 @@ components:
             - integer
             - 'null'
           minimum: 0
+        task_type:
+          type:
+            - integer
+            - 'null'
+          minimum: 0
+          maximum: 2
         percent_complete:
           type:
             - integer
@@ -3195,7 +3201,6 @@ components:
           type:
             - string
             - 'null'
-          maxLength: 10000
     PlanningLinkSnapshotWrite:
       type: object
       required:
@@ -3222,47 +3227,21 @@ components:
           type:
             - integer
             - 'null'
-          enum:
-            - 3
-            - 4
-            - 5
-            - 6
-            - 7
-            - 8
-            - 9
-            - 10
-            - 11
-            - 12
-            - 19
-            - 20
-            - 35
-            - 36
-            - 37
-            - 38
-            - 39
-            - 40
-            - 41
-            - 42
-            - 43
-            - 44
-            - 51
-            - 52
-            - null
     PlanningSnapshotRestore:
       type: object
       required:
+        - tasks
+        - links
         - expected_revision
       properties:
         tasks:
           type: array
           items:
             $ref: '#/components/schemas/PlanningTaskSnapshotWrite'
-          default: []
         links:
           type: array
           items:
             $ref: '#/components/schemas/PlanningLinkSnapshotWrite'
-          default: []
         expected_revision:
           type: integer
           minimum: 0
@@ -3361,6 +3340,10 @@ components:
             - integer
             - 'null'
         work_minutes:
+          type:
+            - integer
+            - 'null'
+        task_type:
           type:
             - integer
             - 'null'
